<resources>
    <string name="app_name">Pharmacy</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="content_description">image</string>
    <string name="title_login">Интернет-аптека</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Пароль</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Войти</string>
    <string name="don_t_have_an_account">Нет аккаунта?</string>
    <string name="register"><u>Регистрация</u></string>

    <string name="create_an_account">Создание аккаунта</string>
    <string name="hint_last_name">Фамилия</string>
    <string name="hint_first_name">Имя</string>
    <string name="et_hint_confirm_password">Повторите пароль</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Регистрация</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="login"><u>Логин</u></string>

    <string name="title_complete_profile">Заполните профиль</string>
    <string name="et_hint_mobile_number">Номер телефона</string>
    <string name="rb_lbl_male">Мужской</string>
    <string name="rb_lbl_female">Женский</string>
    <string name="rb_lbl_other">Не указывать</string>/>
    <string name="btn_lbl_save">Сохранить</string>

    <string name="read_storage_permission_denied">Отсуствует разрешение на чтение.</string>
    <string name="image_selection_failed">Ошибка добавления картинки.</string>

    <string name="err_msg_enter_mobile_number">Введите номер телефона.</string>
    <string name="msg_profile_update_success">Профиль обновлен.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="title_dashboard">Главная</string>
    <string name="title_products">Управление</string>
    <string name="title_orders">Заказы</string>

    <string name="action_settings">Настройки</string>

    <string name="title_settings">Настройки</string>
    <string name="lbl_edit">Изменить</string>
    <string name="lbl_addresses">Адреса</string>
    <string name="btn_lbl_logout">ВЫЙТИ</string>

    <string name="action_add_product">Добавить препарат</string>

    <string name="title_add_product">Добавить препарат</string>
    <string name="et_hint_product_title">Название препарата</string>
    <string name="et_hint_product_price">Цена</string>
    <string name="et_hint_product_description">Описание</string>
    <string name="et_hint_product_quantity">Количество</string>

    <string name="err_msg_select_product_image">Добавьте изображение.</string>
    <string name="err_msg_enter_product_title">Добавьте название.</string>
    <string name="err_msg_enter_product_price">Введите цену.</string>
    <string name="err_msg_enter_product_description">Добавьте описание.</string>
    <string name="err_msg_enter_product_quantity">Введите количество.</string>

    <string name="product_uploaded_success_message">Препарат добавлен.</string>
    <string name="no_products_added_yet">Кажется, здесь ничего нет.</string>
    <string name="no_dashboard_item_found">Кажется, здесь ничего нет.</string>
    <string name="btn_lbl_submit">Готово</string>

    <string name="product_delete_success_message">Препарат удален.</string>
    <string name="delete_dialog_title">Удалить</string>
    <string name="delete_dialog_message">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="title_product_details">Сведения о препарате</string>
    <string name="lbl_product_description">Описание</string>
    <string name="lbl_product_details_stock_quantity">В наличии: </string>

    <string name="btn_lbl_add_to_cart">В корзину</string>

    <string name="success_message_item_added_to_cart">Препарат в корзине.</string>

    <string name="btn_lbl_go_to_cart">К корзине</string>

    <string name="title_my_cart">Корзина</string>
    <string name="no_cart_item_found">Вы еще ничего не добавили.</string>
    <string name="lbl_subtotal">Стоимость товаров</string>
    <string name="lbl_shipping_charge">Стоимость доставки</string>
    <string name="lbl_total_amount">К оплате</string>
    <string name="btn_lbl_checkout">Подтвердить</string>
    <string name="action_cart">Корзина</string>

    <string name="lbl_out_of_stock">Закончилось</string>
    <string name="msg_item_removed_successfully">Успешно удалено.</string>

    <string name="msg_for_available_stock">В наличии больше нет.</string>

    <string name="title_checkout">Оформление заказа</string>
    <string name="checkout_lbl_product_items">Список препаратов</string>
    <string name="checkout_lbl_selected_address">Адреса</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Способ оплаты</string>
    <string name="lbl_cash_on_delivery">Доставка</string>
    <string name="btn_lbl_place_order">Заказать</string>

    <string name="no_orders_placed_yet">Кажется, вы еще ничего не заказывали</string>
</resources>