...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/rv_cart_items_marginTop"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_cart_list_activity" />

    <TextView
        android:id="@+id/tv_no_cart_item_found"
...
                android:textColor="@color/black_overlay"
                android:textSize="@dimen/checkout_label_value_textSize"
                tools:text="$110" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
...
